fix: force light color scheme to prevent browser auto dark mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -109,9 +109,15 @@ blockquote {
   }
 }
 
+:root {
+  color-scheme: light;
+}
+
 /* links */
 
 a {
+  text-decoration: none;
+
   &:focus {
     @extend %tab-focus;
   }
